tests/snapshots/anchor_tests__anchor_with_description.snap
---
source: tests/anchor_tests.rs
description: check ancho declaration with description
info: "[anchor][custom description]\n\n[anchor]{# target-location}"
---
[
  Paragraph([
    Anchor(
      content: [
        Token(Text("anchor")),
      ],
      description: Some([
        Token(Text("custom")),
        Token(Whitespace),
        Token(Text("description")),
      ]),
    ),
  ]),
  Paragraph([
    AnchorDefinition(
      content: [
        Token(Text("anchor")),
      ],
      target: Link(
        filepath: None,
        targets: [
          Generic([
            Token(Text("target")),
            Token(Special('-')),
            Token(Text("location")),
          ]),
        ],
        description: None,
      ),
    ),
  ]),
]
